--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -1,9 +1,22 @@
 .partner-section{
-    height: 200px;
+    min-height: 200px;
     width: 100%;
 }
 .partner-header{
-    height: 20px;
+    height: 40px;
     width: 100%;
     background-color: lightgray;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.partner-div{
+    height: 180px;
+    width: 25%;
+    border: 1px solid gray;
+    padding: 30px;
+    margin: 30px;
+    border-radius: 25px;
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
 }
