--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #eee;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #333;
   text-align: center;
 }
 
